--- a/e-commerce-mvc-config/pom.xml
+++ b/e-commerce-mvc-config/pom.xml
@@ -3,12 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>e-commerce-springcloud</artifactId>
-        <groupId>org.feather</groupId>
+        <artifactId>ecommerce-springcloud</artifactId>
+        <groupId>org.feather.ecommerce</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>e-commerce-mvc-config</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -24,10 +23,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.feather</groupId>
+            <groupId>org.feather.ecommerce</groupId>
             <artifactId>e-commerce-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
