--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.feather</groupId>
-    <artifactId>e-commerce-springcloud</artifactId>
+    <groupId>org.feather.ecommerce</groupId>
+    <artifactId>ecommerce-springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <modules>
+
+
         <module>e-commerce-common</module>
         <module>e-commerce-mvc-config</module>
+        <module>e-commerce-alibaba-nacos-client</module>
     </modules>
 
 
