--- a/e-commerce-alibaba-nacos-client/src/main/resources/bootstrap.yml
+++ b/e-commerce-alibaba-nacos-client/src/main/resources/bootstrap.yml
@@ -14,6 +14,9 @@ spring:
         server-addr: 127.0.0.1:8848
         # server-addr: 127.0.0.1:8848,127.0.0.1:8849,127.0.0.1:8850 # Nacos 服务器地址
         namespace: 848e5e6d-1405-4fc3-a94d-4328a36d9a98
+        metadata:
+          management:
+            context-path: ${server.servlet.context-path}/actuator
 # 暴露端点
 management:
   endpoints:
