--- a/e-commerce-gateway/pom.xml
+++ b/e-commerce-gateway/pom.xml
@@ -28,7 +28,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.feather.ecommerce</groupId>
             <artifactId>e-commerce-common</artifactId>
