--- a/e-commerce-service/e-commerce-account-service/src/main/resources/bootstrap.yml
+++ b/e-commerce-service/e-commerce-account-service/src/main/resources/bootstrap.yml
@@ -39,7 +39,7 @@ spring:
     open-in-view: false
   datasource:
     # 数据源
-    url: jdbc:mysql://127.0.0.1:3306/ecommerce?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/ecommerce?serverTimezone=Asia/Shanghai&characterEncoding=utf-8&useSSL=false
     username: root
     password: root
     type: com.zaxxer.hikari.HikariDataSource
