--- a/e-commerce-gateway/src/main/resources/bootstrap.yml
+++ b/e-commerce-gateway/src/main/resources/bootstrap.yml
@@ -28,10 +28,10 @@ spring:
       retries: 3
     consumer:
       auto-offset-reset: latest
-  zipkin:
-    sender:
-      type: kafka # 默认是 web
-    base-url: http://localhost:9411/
+#  zipkin:
+#    sender:
+#      type: kafka # 默认是 web
+#    base-url: http://localhost:9411/
   main:
     allow-bean-definition-overriding: true  # 因为将来会引入很多依赖, 难免有重名的 bean
 
