--- a/e-commerce-alibaba-nacos-client/src/main/resources/bootstrap.yml
+++ b/e-commerce-alibaba-nacos-client/src/main/resources/bootstrap.yml
@@ -48,6 +48,8 @@ feign:
     enabled: false
   okhttp:
     enabled: true
+  hystrix:
+    enabled: true
   # OpenFeign 集成 Hystrix
 # 暴露端点
 management:
