--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>e-commerce-authority-center</module>
         <module>e-commerce-gateway</module>
         <module>e-commerce-service</module>
+        <module>e-commerce-hystrix-dashboard</module>
     </modules>
 
 
